--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,32 @@
-amqp==5.2.0
-asgiref==3.8.1
-billiard==4.2.1
-celery==5.4.0
-click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-cron-descriptor==1.4.5
-Django==4.2
-django-celery-beat==2.7.0
-django-timezone-field==7.0
-djangorestframework==3.15.2
-kombu==5.4.2
-prompt_toolkit==3.0.48
-psycopg2-binary==2.9.10
-python-crontab==3.2.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-six==1.16.0
-sqlparse==0.5.1
-tzdata==2024.2
-vine==5.1.0
-wcwidth==0.2.13
+Django==4.0.7
+django-environ==0.9.0
+psycopg2==2.9.3
+djangorestframework==3.13.1
+
+celery==5.2.7
+django-celery-results==2.4.0
+django-celery-beat==2.3.0
+
+whitenoise==6.2.0
+
+django-filter==22.1
+django-extensions==3.2.1
+django-cors-headers==3.13.0
+django-storages==1.13.1
+
+drf-jwt==1.19.2
+
+boto3==1.24.71
+attrs==22.1.0
+
+djangorestframework-simplejwt==5.2.2
+drf-spectacular==0.24.2
+
+django-redis==5.2.0
+Faker==15.1.1
+factory-boy==3.2.1
+pytest==7.2.0
+pytest-django==4.5.2
+
+gunicorn==20.1.0
+sentry-sdk==1.9.8
